# aiopl-agent-hackathon-starter

./: .env.example  .gitignore  README.md  pyproject.toml
data/: sample.csv
docs/: agent_optimization_playbook.md  api_keys_first_time.md  cost_budgeting.md  eval_harness_notes.md  first_hackathon_guide.md  harness_tutorial.md  how_to_use_ai_assistants.md  laptop_readiness.md  prompt_patterns.md  questions_for_organizers.md  study_material.md
src/aio_agent_harness/: __init__.py  cli.py  task.py
